--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
             </div>
         </form>
     </div>
+    <div class = "text-center"style = "padding-top : 40px;"><p> Written and Coded by <a target = "_blank" href = "https://www.freecodecamp.org/Geo_lal"style = "text-decoration: none">Geo Lal</a></p></div>
 </body>
 </html>
