--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         </form>
     </div>
     <div class="text-center" style="padding-top: 40px;">
-      <p>
+      <p style="font-size: 1.05rem;">
       Written and Coded by
-      <a href="https://www.freecodecamp.org/Geo_lal" target="_blank" style="text-decoration: none; color: #20fc55;">Geo Lal</a>
+      <a href="https://www.freecodecamp.org/Geo_lal" target="_blank" style="text-decoration: none; color: green;">Geo Lal</a>
       </p>
     </div>
 </body>
